1.1rc1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request #7792: Possibility to omit the short options.


1.1beta2 - Tuesday 09 May 2006 
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #8173: ezcConsoleInput::getHelpText() does return empty synopsis.


1.1beta1 - Wednesday 19 April 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added getHelpTable() and getHelpText() methods to ezcConsoleInput for more
  convenient help output generation.
- Added ezcConsoleOption::$isHelpOption flag to indicate, that an option is to
  request help. If this flag is set and the option is submitted by the user,
  rule checking (dependencies/exclusions/madatoryness) is disabled.
- Added ezcConsoleInput::helpOptionSet() method which returns if an option
  that was defined to be a help option was submitted.
- Added the class ezcConsoleProgressMonitor that is capable of printing status
  information and percentage progress to the console.


1.0.1 - Monday 06 March 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed unreported bug: ezcConsoleOutput::toPos() has a typo in a parameter.
- Fixed unreported bug: ezcConsoleOption::__construct() still threw old
  exception style. Now throws correct ezcConsoleInvalidOptionNameException on
  an invalid option name.
- Fixed bug #7897: Access to 'step' property does not work through overloading
  in ezcConsoleProgressbar.
- Fixed bug #7923: ezcConsoleInput::getSynopsis() does not work when
  supplying parameters to show.

ezcConsoleProgressbar
---------------------

- Added support for a non-integer maximum.
- Added an optional parameter to the advance() method that advances the
  progress bar with a different step size than 1.
- Added formatting options for %max% and %act%.



1.0 - Monday 30 January 2006