@@ -2,6 +2,7 @@
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
 - Implemented feature request #7792: Possibility to omit the short options.
+- Refactored to use the new ezcBaseOptions class.
 
 
 1.1beta2 - Tuesday 09 May 2006 
